--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -1,18 +1,29 @@
 @use "../styles/components/Header.scss";
+@use "../styles/components/Modal.scss";
 
 :root {
   font-family: monospace;
+
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #1A1A19;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --col-window-bg: #1A1A19;
+  --col-white: #F6FCDF;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 body {
