--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -1,5 +1,5 @@
 @use "../styles/components/Header.scss";
-@use "../styles/components/Modal.scss";
+@use "../styles/pages/Options.scss";
 
 :root {
   font-family: monospace;
@@ -7,17 +7,21 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #1A1A19;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --col-window-bg: #1A1A19;
-  --col-white: #F6FCDF;
+  --col-window-bg: #243642;
+  --col-primary: #629584;
+  --col-secondary: #387478;
+  --col-accent: #E78F81;
+  --col-white: #E2F1E7;
+
+  --header-margin-top: 8.5rem;
+
+  color: var(--col-white);
+  background-color: var(--col-window-bg);
 }
 
 * {
@@ -27,11 +31,16 @@
 }
 
 body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: var(--header-margin-top);
+}
 
-  min-width: 320px;
-  min-height: 100vh;
+.page>h1 {
+  $faded-white: rgba(226, 241, 231, 0.6);
+
+  opacity: 0.6;
+  letter-spacing: 0.5rem;
+
+  border-top: 1px solid $faded-white;
+  border-bottom: 1px solid $faded-white;
+  padding: 0.25rem 1rem;
 }
