--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -1,5 +1,6 @@
 @use "../styles/components/Header.scss";
-@use "../styles/pages/Options.scss";
+@use "../styles/pages/OptionsPage.scss";
+@use "../styles/pages/TaskPage.scss";
 
 :root {
   font-family: monospace;
@@ -18,6 +19,9 @@
   --col-accent: #E78F81;
   --col-white: #E2F1E7;
 
+  --col-white-faded: rgba(226, 241, 231, 0.6);
+  --col-window-bg-faded: rgba(36, 54, 66, 0.6);
+
   --header-margin-top: 8.5rem;
 
   color: var(--col-white);
@@ -34,13 +38,20 @@ body {
   margin-top: var(--header-margin-top);
 }
 
-.page>h1 {
-  $faded-white: rgba(226, 241, 231, 0.6);
+img {
+  position: absolute;
+  width: 100px;
+  top: 0;
+  left: 0;
 
+  object-fit: cover;
+}
+
+.page>h1 {
   opacity: 0.6;
   letter-spacing: 0.5rem;
 
-  border-top: 1px solid $faded-white;
-  border-bottom: 1px solid $faded-white;
+  border-top: 1px solid var(--col-white-faded);
+  border-bottom: 1px solid var(--col-white-faded);
   padding: 0.25rem 1rem;
 }
