--- a/pa_client/src/styles/components/Header.scss
+++ b/pa_client/src/styles/components/Header.scss
@@ -5,15 +5,12 @@ header {
 
   font-size: 1.5rem;
 
-  img {
-    position: absolute;
-    width: 150px;
-    left: 0;
-  }
-
   nav {
     padding: 0 min(5rem, 5vw);
     background: var(--col-white);
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 
     .header-list {
