--- a/pa_client/src/styles/components/TaskCard.scss
+++ b/pa_client/src/styles/components/TaskCard.scss
@@ -21,7 +21,7 @@
   }
 
   &:hover {
-    transform: scale(1.02);
+    transform: scale(1.01);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   }
 }
@@ -32,8 +32,12 @@
 }
 
 .tag-list {
+  height: 5rem;
+  overflow-y: scroll;
+
   display: flex;
   align-items: flex-start;
+  justify-content: center;
   flex-wrap: wrap;
   column-gap: 0.5rem;
   row-gap: 0.2rem;
@@ -41,14 +45,31 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
 
-  background-color: var(--col-window-bg-faded);
+  background-color: var(--col-window-bg);
+
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: var(--col-primary);
+    border-radius: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: var(--col-secondary);
+  }
 }
 
 .tag-name {
-  font-size: .85rem;
+  font-size: .8rem;
   text-align: center;
 
-  background-color: var(--col-window-bg-faded);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   color: var(--col-white);
 
   border-radius: 1rem;
@@ -59,19 +80,27 @@
   }
 }
 
+.adder-tag {
+  .tag-list {
+    background-color: var(--col-window-bg);
+  }
+}
+
 .add-tag {
   background: none;
   border: none;
 
   span {
+    $currentSize: min(10rem, 15vw);
+
     position: absolute;
-    top: 0;
-    right: 5rem;
+    bottom: -1rem;
+    left: calc(60% - ($currentSize / 2));
 
     opacity: 0.3;
     font-weight: 600;
 
     color: var(--col-white-faded);
-    font-size: min(10rem, 15vw);
+    font-size: $currentSize;
   }
 }
