--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -53,5 +53,6 @@ img {
 
   border-top: 1px solid var(--col-white-faded);
   border-bottom: 1px solid var(--col-white-faded);
-  padding: 0.25rem 1rem;
+  padding-block: 0.25rem;
+  padding-left: 2rem;
 }
