--- a/pa_client/src/styles/components/Header.scss
+++ b/pa_client/src/styles/components/Header.scss
@@ -2,11 +2,10 @@ header {
   position: fixed;
   top: 1.5rem;
   right: 0;
-
   font-size: 1.5rem;
 
   nav {
-    padding: 0 min(5rem, 5vw);
+    width: 60vw;
     background: var(--col-white);
     border-top-left-radius: 0.5rem;
     border-bottom-left-radius: 0.5rem;
@@ -21,7 +20,7 @@ header {
       padding: 0.5rem;
 
       display: flex;
-      justify-content: end;
+      justify-content: space-evenly;
       align-items: center;
       gap: min(5rem, 5vw);
 
@@ -59,5 +58,11 @@ header {
         }
       }
     }
+  }
+}
+
+@media screen and (max-width: 650px) {
+  header nav {
+    width: unset;
   }
 }
