--- a/pa_client/src/styles/pages/TaskPage.scss
+++ b/pa_client/src/styles/pages/TaskPage.scss
@@ -3,8 +3,26 @@
 .tasks-display {
   display: grid;
   justify-content: center;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
 
   gap: 1rem;
   padding: 1rem;
+}
+
+@media screen and (min-width: 1200px) {
+  .tasks-display {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .tasks-display {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .tasks-display {
+    grid-template-columns: 1fr;
+  }
 }
