--- a/pa_client/src/styles/components/Modal.scss
+++ b/pa_client/src/styles/components/Modal.scss
@@ -32,7 +32,7 @@
 
   padding: 1rem;
   border-radius: 0.5rem;
-  max-width: 500px;
+  max-width: 30rem;
 
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
