--- a/pa_client/src/styles/components/TaskForm.scss
+++ b/pa_client/src/styles/components/TaskForm.scss
@@ -94,7 +94,7 @@ form {
       .add-tag-btn {
         position: absolute;
         right: 0;
-        height: 3rem;
+        height: 100%;
 
         padding: 0.75rem;
         background: var(--col-secondary);
