--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -47,8 +47,8 @@ img {
   object-fit: cover;
 }
 
-.page .page-name {
-  h1 {
+.page {
+  .page-header h1 {
     opacity: 0.6;
     letter-spacing: 0.5rem;
 
