--- a/pa_client/src/styles/components/TagFilter.scss
+++ b/pa_client/src/styles/components/TagFilter.scss
@@ -8,27 +8,43 @@
 
   .filter-btn {
     display: flex;
-    gap: 1rem;
+    gap: 0.25rem;
     min-width: 7rem;
 
     font-family: monospace;
-
-    background: none;
     border: none;
+    border-radius: 0.25rem;
 
+    background: var(--col-secondary);
     color: var(--col-white);
+    padding: 0.5rem;
+
+    div {
+      display: flex;
+      gap: 0.2rem;
+
+      .amount {
+        opacity: 0.6;
+        color: var(--col-secondary);
+
+        &.non-zero {
+          color: var(--col-white);
+        }
+      }
+    }
   }
 
   .filter-items {
     z-index: 1000;
-
     position: absolute;
-    top: 2rem;
+    top: 2.5rem;
     right: -0.5rem;
     min-width: 20rem;
     max-height: 25rem;
 
-    padding: 0.5rem;
+    padding: 0.75rem;
+    padding-top: 1rem;
+
     margin-left: 1rem;
 
     border-radius: 0.25rem;
@@ -36,7 +52,7 @@
 
     display: grid;
     grid-template-columns: 1fr 7rem;
-    gap: 1rem;
+    gap: 1rem 0.25rem;
 
     background: var(--col-secondary);
 
@@ -44,9 +60,15 @@
       display: grid;
       grid-column: span 2;
       grid-template-columns: 1fr 1fr;
-      border-top: 1px solid var(--col-window-bg);
 
-      padding-top: 3rem;
+      background: var(--col-window-bg-faded);
+      box-shadow: inset 1px 1px 5px var(--col-window-bg);
+      border-radius: 0.25rem;
+
+      padding-left: 0.2rem;
+      max-height: 15rem;
+      overflow-y: scroll;
+      scrollbar-gutter: stable;
 
       label {
         display: flex;
@@ -62,14 +84,14 @@
           appearance: none;
           display: grid;
           place-items: center;
-
+          cursor: pointer;
 
           width: 1.15rem;
           height: 1.15rem;
 
           border-radius: 10ch;
-          border: 1px dashed var(--col-window-bg);
-          background-color: var(--col-white);
+          border: 1px dashed var(--col-window-bg-faded);
+          background-color: var(--col-white-faded);
           box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
           outline: none;
@@ -93,15 +115,45 @@
 
           &:checked {
             border: 1px solid var(--col-window-bg);
+            background: var(--col-white);
           }
         }
+
+        &:hover {
+          input {
+            border: 1px solid var(--col-window-bg);
+            background: var(--col-white);
+            transform: scale(1.2);
+          }
+        }
+      }
+
+      &::-webkit-scrollbar {
+        width: 0.25rem;
+      }
+
+      &::-webkit-scrollbar-track {
+        background-color: transparent;
+      }
+
+      &::-webkit-scrollbar-thumb {
+        background: var(--col-white-faded);
+        border-radius: 0.5rem;
+      }
+
+      &::-webkit-scrollbar-thumb:hover {
+        background: var(--col-white);
       }
     }
 
     .filter-type-btn {
+      position: relative;
       display: grid;
+      background: var(--col-window-bg-faded);
+      box-shadow: inset 1px 1px 5px var(--col-window-bg);
+
       padding-left: 0.5rem;
-      gap: .5rem;
+      border-radius: 0.25rem;
 
       label {
         display: flex;
@@ -111,14 +163,13 @@
         input[type="radio"] {
           -webkit-appearance: none;
           appearance: none;
-          display: grid;
-          place-items: center;
+          cursor: pointer;
 
           width: 1rem;
           height: 1rem;
 
           border: none;
-          border-radius: 100%;
+          border-radius: 1rem;
           background-color: var(--col-white-faded);
           box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
 
@@ -134,13 +185,20 @@
 
             border: none;
             background-color: var(--col-accent);
-            border-radius: 100%;
+            border-radius: 1rem;
             transform: scale(0);
             transition: 300ms transform cubic-bezier(0.23, 1, 0.320, 1);
           }
 
           &:checked::before {
             transform: scale(1, -1) rotate(45deg);
+          }
+        }
+
+        &:hover {
+          input {
+            background: var(--col-white);
+            transform: scale(1.2);
           }
         }
       }
@@ -154,14 +212,13 @@
       align-items: center;
       align-content: center;
 
-      background: var(--col-window-bg-faded);
+      background: var(--col-window-bg);
       color: var(--col-white);
-      box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 2px rgba(0, 0, 0, 0.3);
 
       border: none;
       border-radius: 0.25rem;
       padding: 0.5rem;
-      margin-right: 0.5rem;
 
       svg {
         width: 1.5rem;
@@ -181,11 +238,13 @@
     }
   }
 
+  //* Item animations
   .filter-items {
     transform-origin: 90% top;
     transition: transform 0.15s ease, opacity 0.2s ease;
 
     &.shown {
+      pointer-events: auto;
       transform: scale(1);
       opacity: 1;
 
@@ -200,9 +259,9 @@
     }
 
     &.hidden {
+      pointer-events: none;
       transform: scale(0);
       opacity: 0;
-
       transition-delay: 0.1s;
 
       * {
