Added ability to drag and drop tasks to be in an arbitrary positions

--- a/pa_client/src/styles/components/TagFilter.scss
+++ b/pa_client/src/styles/components/TagFilter.scss
@@ -119,11 +119,13 @@
           }
         }
 
-        &:hover {
-          input {
-            border: 1px solid var(--col-window-bg);
-            background: var(--col-white);
-            transform: scale(1.2);
+        @media screen and (min-width: 650px) {
+          &:hover {
+            input {
+              border: 1px solid var(--col-window-bg);
+              background: var(--col-white);
+              transform: scale(1.2);
+            }
           }
         }
       }
