Experiment with a 'position' variable

--- a/pa_client/src/styles/pages/TaskPage.scss
+++ b/pa_client/src/styles/pages/TaskPage.scss
@@ -17,11 +17,14 @@
   .is-empty-filter {
     display: flex;
     justify-content: center;
+    align-items: center;
 
+    font-size: 1.5rem;
     font-weight: bolder;
     background: var(--col-accent);
     color: var(--col-window-bg);
     border-radius: 0.5rem;
+    user-select: none;
   }
 
   .task-card {
