--- a/pa_client/src/styles/components/TaskCard.scss
+++ b/pa_client/src/styles/components/TaskCard.scss
@@ -109,9 +109,34 @@
 }
 
 .drag-handle {
-  padding: 5px;
-  background-color: #ccc;
-  border-radius: 3px;
-  margin-top: 10px;
-  text-align: center;
+  svg {
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    opacity: 0.6;
+
+    color: var(--col-window-bg);
+    width: 2rem;
+    height: 2rem;
+
+    &:active {
+      color: var(--col-primary);
+    }
+  }
+
+  .index {
+    user-select: none;
+    pointer-events: none;
+    opacity: 0.2;
+
+    position: absolute;
+    bottom: 0;
+    right: 1rem;
+
+    font-size: 3rem;
+    font-weight: 200;
+    font-style: italic;
+
+    color: var(--col-window-bg);
+  }
 }
