--- a/pa_client/src/styles/components/TaskCard.scss
+++ b/pa_client/src/styles/components/TaskCard.scss
@@ -25,6 +25,11 @@
     transform: scale(1.01);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   }
+
+  &.firefox .tag-list {
+    scrollbar-width: thin;
+    scrollbar-color: var(--col-secondary) transparent;
+  }
 }
 
 .task-name {
@@ -33,7 +38,8 @@
 }
 
 .tag-list {
-  // overflow-y: scroll;
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
   // overflow-x: hidden;
 
   display: flex;
@@ -47,7 +53,16 @@
   padding: 0.5rem;
   border-radius: 0.5rem;
 
-  // background-color: var(--col-window-bg-faded);
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
+  background-color: var(--col-window-bg-faded);
+  height: 5rem;
+
+  .no-tag {
+    font-size: 1.5rem;
+    align-self: center;
+    color: var(--col-white-faded);
+    text-transform: lowercase;
+  }
 
   &::-webkit-scrollbar {
     width: 0.5rem;
@@ -73,6 +88,7 @@
 
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   color: var(--col-window-bg);
+  background-color: var(--col-white);
 
   border-radius: 1rem;
   padding: 0.2rem 0.8rem;
@@ -84,8 +100,11 @@
 }
 
 .adder-tag {
-  .tag-list {
-    background-color: transparent;
+
+  .tag-list,
+  .tag-name {
+    background: none;
+    box-shadow: none;
   }
 }
 
