--- a/pa_client/src/styles/components/TaskCard.scss
+++ b/pa_client/src/styles/components/TaskCard.scss
@@ -7,9 +7,9 @@
   background-color: var(--col-white);
   border-radius: 0.5rem;
 
-  min-height: 10rem;
   transition: transform 0.1s ease-in-out;
   user-select: none;
+  height: 12rem;
 
   &.adder-tag {
     opacity: 0.3;
@@ -21,11 +21,6 @@
     }
   }
 
-  &:hover {
-    transform: scale(1.01);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-  }
-
   &.firefox .tag-list {
     scrollbar-width: thin;
     scrollbar-color: var(--col-secondary) transparent;
@@ -35,6 +30,10 @@
 .task-name {
   text-transform: capitalize;
   color: var(--col-window-bg);
+  overflow: hidden;
+
+  text-overflow: ellipsis;
+  padding-right: 2rem;
 }
 
 .tag-list {
@@ -47,18 +46,18 @@
   justify-content: center;
   flex-wrap: wrap;
 
-  column-gap: 0.5rem;
-  row-gap: 0.2rem;
+  column-gap: 0.3rem;
+  row-gap: 0.3rem;
 
   padding: 0.5rem;
+  padding-left: 0.7rem;
   border-radius: 0.5rem;
 
   box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.3);
   background-color: var(--col-window-bg-faded);
-  height: 5rem;
+  height: 4rem;
 
   .no-tag {
-    font-size: 1.5rem;
     align-self: center;
     color: var(--col-white-faded);
     text-transform: lowercase;
@@ -83,7 +82,7 @@
 }
 
 .tag-name {
-  font-size: .85rem;
+  font-size: .8rem;
   text-align: center;
 
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
@@ -91,7 +90,7 @@
   background-color: var(--col-white);
 
   border-radius: 1rem;
-  padding: 0.2rem 0.8rem;
+  padding: 0 0.8rem;
 
   &.imp {
     background-color: var(--col-primary);
@@ -99,27 +98,39 @@
   }
 }
 
+.status-container {
+  justify-self: center;
+  font-size: 1rem;
+  border-radius: 1rem;
+
+  padding: 0 1rem;
+  background: var(--col-window-bg);
+  color: var(--col-white);
+}
+
 .adder-tag {
 
   .tag-list,
-  .tag-name {
+  .tag-name,
+  .status-container {
     background: none;
     box-shadow: none;
+    color: transparent;
   }
 }
 
 .add-tag {
   background: none;
   border: none;
+  position: absolute;
+
+  bottom: 0;
+  right: 2rem;
 
   span {
     $currentSize: min(10rem, 30vw);
 
-    position: absolute;
-    bottom: -1rem;
-    left: calc(55% - ($currentSize / 2));
-
-    opacity: 0.3;
+    opacity: 0.2;
     font-weight: 600;
 
     color: var(--col-white-faded);
