--- a/pa_client/src/styles/pages/TaskPage.scss
+++ b/pa_client/src/styles/pages/TaskPage.scss
@@ -12,7 +12,8 @@
   grid-template-columns: repeat(3, 1fr);
 
   gap: 1rem;
-  padding: 1rem;
+  margin-top: 1rem;
+  padding: 0 1rem;
 
   .is-empty-filter {
     display: flex;
