--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -1,6 +1,6 @@
 @use "../styles/components/Header.scss";
 @use "../styles/pages/OptionsPage.scss";
-@use "../styles/pages/TaskPage.scss";
+@use "../styles/pages/HomePage.scss";
 
 :root {
   font-family: monospace;
