--- a/pa_client/src/styles/index.scss
+++ b/pa_client/src/styles/index.scss
@@ -55,6 +55,7 @@ button {
   .page-header h1 {
     opacity: 0.6;
     letter-spacing: 0.5rem;
+    text-transform: capitalize;
 
     border-top: 1px solid var(--col-white-faded);
     border-bottom: 1px solid var(--col-white-faded);
