--- a/pa_client/src/styles/components/Modal.scss
+++ b/pa_client/src/styles/components/Modal.scss
@@ -33,6 +33,9 @@
   padding: 1rem;
   border-radius: 0.5rem;
   max-width: 30rem;
+  max-height: 80vh;
+
+  overflow-y: auto;
 
   width: 100%;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
