--- a/pa_client/src/styles/components/TaskForm.scss
+++ b/pa_client/src/styles/components/TaskForm.scss
@@ -39,7 +39,7 @@ form {
 
         font-size: 1rem;
         background: var(--col-white);
-        color: var(--col-window-bg);
+        color: var(--col-window-bg-faded);
       }
 
       &:focus-within {
@@ -63,6 +63,7 @@ form {
       }
 
       label {
+        color: var(--col-window-bg-faded);
         pointer-events: none;
       }
 
@@ -127,7 +128,7 @@ form {
 }
 
 .tag-btns {
-  margin-top: 0.5rem;
+  margin-top: 1rem;
   position: relative;
   display: grid;
   grid-template-columns: 1fr 7rem;
